--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+/* font-family: 'Inter', sans-serif;
+font-family: 'Lexend Deca', sans-serif; */
+
 * {
     margin: 0;
     padding: 0;
@@ -18,11 +21,15 @@ div.wrapper {
     margin: 25vh auto;
     max-width: 1440px;
     background-color:hsl(244, 38%, 16%);
+    border-radius: 8px;
 }
 
 div.left-box {
+    padding: 7% 10%;
     float: left;
     width: 50%;
+    height: 50vh;
+    position: relative;
 }
 
 div.image-bg {
@@ -30,6 +37,7 @@ div.image-bg {
     height: 50vh;
     width: 50%;
     background-color:hsl(277, 64%, 61%);
+    border-radius: 8px;
 }
 
 div.image-box {
@@ -39,5 +47,52 @@ div.image-box {
     background-repeat: no-repeat;
     background-size: cover;
     opacity: .65;
+    border-radius: 8px;
 }
 
+div h1 {
+font-family: 'Inter', sans-serif;
+font-weight: 700;
+color: hsl(0, 0%, 100%);
+}
+
+div h1 span {
+    color: hsl(277, 64%, 61%);
+}
+
+div p.description {
+    color: hsla(0, 0%, 100%, 0.75);
+    font-size: 14px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    margin-top: 7%;
+    text-align: justify;
+}
+
+li {
+    list-style: none;
+    position: absolute;
+    bottom: 20%;
+}
+
+li ul {
+    display: inline-block;
+    color: hsla(0, 0%, 100%, 0.6);
+    padding-right: 60px;
+}
+
+li ul p.number {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: hsl(0, 0%, 100%);
+
+}
+
+li ul p.text {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: hsla(0, 0%, 100%, 0.6);
+    letter-spacing: 1px;
+    margin-top: 5px;
+}
